bk_ida/gccida/c3/e53toe
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/e53toe/src/real.c:3738:12: error: expected expression
*( _OWORD *)&v31[1] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/e53toe/src/real.c:3738:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v31[1] = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/e53toe/src/obj/real.o] Error 1
